Fix avatar style on mobile screen

--- a/src/routes/ToolsStyles.css
+++ b/src/routes/ToolsStyles.css
@@ -31,7 +31,7 @@ body{
 
   @media only screen and (max-width: 1400px) {
     .toolsCircle{
-      width: 200px!important;
+      width: 180px!important;
     }
   }
 
